apps/pigeons/api/base/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: pigeons-api
  namespace: pigeons
spec:
  replicas: 2
  selector:
    matchLabels:
      app: pigeons-api
  template:
    metadata:
      labels:
        app: pigeons-api
    spec:
      containers:
        - name: api
          image: ghcr.io/agogos-llc/pigeons-api:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 3000
          readinessProbe:
            httpGet:
              path: /health
              port: 3000
            initialDelaySeconds: 10
            periodSeconds: 10
          startupProbe:
            httpGet:
              path: /health
              port: 3000
            failureThreshold: 30
            periodSeconds: 10
          livenessProbe:
            httpGet:
              path: /health
              port: 3000
            initialDelaySeconds: 20
            periodSeconds: 20
