apps/pigeons/api/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: pigeons-api
  namespace: pigeons
spec:
  selector:
    app: pigeons-api
  ports:
    - name: http
      port: 80
      targetPort: 3000
