apps/pigeons/api/base/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: pigeons-api-ingress
  namespace: pigeons
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
    nginx.ingress.kubernetes.io/proxy-body-size: "50m"
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - api.pigeons.churchlify.com
      secretName: pigeons-api-tls
  rules:
    - host: api.pigeons.churchlify.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: pigeons-api
                port:
                  number: 80
